--- a/libs/jade/colours.jade
+++ b/libs/jade/colours.jade
@@ -28,52 +28,44 @@ block content
 						br
 						| @heritage-blue
 						br
-						| #004B88
 				.span4.swatch.swatch--brand--heritage-yellow
 					p Heritage Yellow
 						br
 						| @heritage-yellow
 						br
-						| #FCBB69
 			.row
 				.span4.swatch.swatch--brand--responsible-purple
 					p Responsible Purple
 						br
 						| @responsible-purple
 						br
-						| #57486B
 				.span4.swatch.swatch--brand--responsible-aqua
 					p Responsible Aqua
 						br
 						| @responsible-aqua
 						br
-						| #90CE9C
 			.row
 				.span4.swatch.swatch--brand--inventive-teal
 					p Inventive Teal
 						br
 						| @inventive-teal
 						br
-						| #006278
 				.span4.swatch.swatch--brand--inventive-pink
 					p Inventive Pink
 						br
 						| @inventive-pink
 						br
-						| #FBC0AD
 			.row
 				.span4.swatch.swatch--brand--generous-green
 					p Generous Green
 						br
 						| @generous-green
 						br
-						| #00553F
 				.span4.swatch.swatch--brand--generous-mauve
 					p Generous Mauve
 						br
 						| @generous-mauve
 						br
-						| #B5AFD7
 			.row
 				.span12
 					h3 Brand tints
@@ -84,26 +76,22 @@ block content
 						br
 						| @heritage-blue-lighter
 						br
-						| #A2D5FF
 				.span4.swatch.swatch--beta--heritage-blue-lightest
 					p Heritage Blue Lightest
 						br
 						| @heritage-blue-lightest
 						br
-						| #F2F8FF
 				.span4.swatch.swatch--beta--heritage-yellow-lighter
 					p Heritage Yellow Lighter
 						br
 						| @heritage-yellow-lighter
 						br
-						| #FEE4C3
 			.row
 				.span4.swatch.swatch--beta--heritage-yellow-darker
 					p Heritage Yellow Darker
 						br
 						| @heritage-yellow-darker
 						br
-						| #FBA437
 			.row
 				.span12
 					h3 Extended palette
@@ -114,45 +102,38 @@ block content
 						br
 						| @red
 						br
-						| #DF3034
 				.span4.swatch.swatch--beta--pink
 					p Pink
 						br
 						| @pink
 						br
-						| #F499BE
 				.span4.swatch.swatch--beta--orange
 					p Orange
 						br
 						| @orange
 						br
-						| #F47738
 			.row
 				.span4.swatch.swatch--beta--yellow
 					p Yellow
 						br
 						| @yellow
 						br
-						| #FFBF47
 				.span4.swatch.swatch--beta--green
 					p Green
 						br
 						| @green
 						br
-						| #537D2D
 				.span4.swatch.swatch--beta--blue
 					p Blue
 						br
 						| @blue
 						br
-						| #003C64
 			.row
 				.span4.swatch.swatch--beta--aqua
 					p Aqua
 						br
 						| @aqua
 						br
-						| #81CEC6
 			.row
 				.span12
 					h3 Extended palette tints
@@ -163,76 +144,64 @@ block content
 						br
 						| @red-light
 						br
-						| #E76568
 				.span4.swatch.swatch--beta--red-lighter
 					p Red Lighter
 						br
 						| @red-lighter
 						br
-						| #F2ACAD
 				.span4.swatch.swatch--beta--orange-light
 					p Orange Light
 						br
 						| @orange-light
 						br
-						| #F8A980
 			.row
 				.span4.swatch.swatch--beta--orange-lighter
 					p Orange Lighter
 						br
 						| @orange-lighter
 						br
-						| #FBCAB1
 				.span4.swatch.swatch--beta--green-light
 					p Green Light
 						br
 						| @green-light
 						br
-						| #B9DB9B
 				.span4.swatch.swatch--beta--green-lighter
 					p Green Lighter
 						br
 						| @green-lighter
 						br
-						| #D3E8C1
 			.row
 				.span4.swatch.swatch--beta--blue-light
 					p Blue Light
 						br
 						| @blue-light
 						br
-						| #A5BDDC
 				.span4.swatch.swatch--beta--blue-lighter
 					p Blue Lighter
 						br
 						| @blue-lighter
 						br
-						| #CAEAFF
 				.span4.swatch.swatch--beta--blue-darker
 					p Blue Darker
 						br
 						| @blue-darker
 						br
-						| #002D4A
 			.row
 				.span4.swatch.swatch--beta--aqua-light
 					p Aqua Light
 						br
 						| @aqua-light
 						br
-						| #B8E3DF
 				.span4.swatch.swatch--beta--yellow-light
 					p Yellow Light
 						br
 						| @yellow-light
 						br
-						| #FFEBC6
 				.span4.swatch.swatch--beta--purple-dark
 					p Purple Dark
 						br
 						| @purple-dark
 						br
-						| #53388D
 			.row
 				.span12
 					h3 Monochrome palette
@@ -243,87 +212,74 @@ block content
 						br
 						| @gray-0
 						br
-						| #202020
 				.span4.swatch.swatch--mono--gray1
 					p Gray 1
 						br
 						| @gray-1
 						br
-						| #404040
 				.span4.swatch.swatch--mono--gray2
 					p Gray 2
 						br
 						| @gray-2
 						br
-						| #606060
 			.row
 				.span4.swatch.swatch--mono--gray3
 					p Gray 3
 						br
 						| @gray-3
 						br
-						| #808080
 				.span4.swatch.swatch--mono--gray4
 					p Gray 4
 						br
 						| @gray-4
 						br
-						| #9F9F9F
 				.span4.swatch.swatch--mono--gray5
 					p Gray 5
 						br
 						| @gray-5
 						br
-						| #BFBFBF
 			.row
 				.span4.swatch.swatch--mono--gray6
 					p Gray 6
 						br
 						| @gray-6
 						br
-						| #DFDFDF
 				.span4.swatch.swatch--mono--gray7
 					p Gray 7
 						br
 						| @gray-7
 						br
-						| #EEEEEE
 				.span4.swatch.swatch--mono--gray8
 					p Gray 8
 						br
 						| @gray-8
 						br
-						| #F2F2F2
-			.row
+			//.row
 				.span12
 					h3 Adviser colour palette
 					p Range of colours used for adviser only content.
-			.row
+			//.row
 				.span4.swatch.swatch--adviser--inventive-teal-light
 					p Inventive Teal Light
 						br
 						| @inventive-teal-light
 						br
-						| #007792
 				.span4.swatch.swatch--adviser--inventive-teal-lighter
 					p Inventive Teal Lighter
 						br
 						| @inventive-teal-lighter
 						br
-						| #87C3D0
-			.row
+			//.row
 				.span4.swatch.swatch--adviser-blue-gray
 					p Adviser Blue Gray
 						br
 						| @adviser-blue-gray
 						br
-						| #ACAA9B
 				.span4.swatch.swatch--adviser-stone
 					p Adviser Stone
 						br
 						| @adviser-stone
 						br
-						| #5D7678
 
 	script.
 		var sw = $('.swatch').width();
