--- a/libs/jade/colours.jade
+++ b/libs/jade/colours.jade
@@ -23,45 +23,45 @@ block content
 					h3 Brand
 					p Colours as defined in the #[a(href="#") Brand Guidelines]. To be used in pairs as described below. These colours are not to be used for marketing communications such as campaigns, reporting and policy.
 			.row
-				.span4.swatch.swatch--brand--heritage-blue
+				.span4-sm.span6.swatch.swatch--brand--heritage-blue
 					p Heritage Blue
 						br
 						| @heritage-blue
 						br
-				.span4.swatch.swatch--brand--heritage-yellow
+				.span4-sm.span6.swatch.swatch--brand--heritage-yellow
 					p Heritage Yellow
 						br
 						| @heritage-yellow
 						br
 			.row
-				.span4.swatch.swatch--brand--responsible-purple
+				.span4-sm.span6.swatch.swatch--brand--responsible-purple
 					p Responsible Purple
 						br
 						| @responsible-purple
 						br
-				.span4.swatch.swatch--brand--responsible-aqua
+				.span4-sm.span6.swatch.swatch--brand--responsible-aqua
 					p Responsible Aqua
 						br
 						| @responsible-aqua
 						br
 			.row
-				.span4.swatch.swatch--brand--inventive-teal
+				.span4-sm.span6.swatch.swatch--brand--inventive-teal
 					p Inventive Teal
 						br
 						| @inventive-teal
 						br
-				.span4.swatch.swatch--brand--inventive-pink
+				.span4-sm.span6.swatch.swatch--brand--inventive-pink
 					p Inventive Pink
 						br
 						| @inventive-pink
 						br
 			.row
-				.span4.swatch.swatch--brand--generous-green
+				.span4-sm.span6.swatch.swatch--brand--generous-green
 					p Generous Green
 						br
 						| @generous-green
 						br
-				.span4.swatch.swatch--brand--generous-mauve
+				.span4-sm.span6.swatch.swatch--brand--generous-mauve
 					p Generous Mauve
 						br
 						| @generous-mauve
@@ -71,23 +71,22 @@ block content
 					h3 Brand tints
 					p There are also variations of some of these swatches in lighter tints.
 			.row
-				.span4.swatch.swatch--beta--heritage-blue-lighter
+				.span4-sm.span6.swatch.swatch--beta--heritage-blue-lighter
 					p Heritage Blue Lighter
 						br
 						| @heritage-blue-lighter
 						br
-				.span4.swatch.swatch--beta--heritage-blue-lightest
+				.span4-sm.span6.swatch.swatch--beta--heritage-blue-lightest
 					p Heritage Blue Lightest
 						br
 						| @heritage-blue-lightest
 						br
-				.span4.swatch.swatch--beta--heritage-yellow-lighter
+				.span4-sm.span6.swatch.swatch--beta--heritage-yellow-lighter
 					p Heritage Yellow Lighter
 						br
 						| @heritage-yellow-lighter
 						br
-			.row
-				.span4.swatch.swatch--beta--heritage-yellow-darker
+				.span4-sm.span6.swatch.swatch--beta--heritage-yellow-darker
 					p Heritage Yellow Darker
 						br
 						| @heritage-yellow-darker
@@ -97,39 +96,37 @@ block content
 					h3 Extended palette
 					p Colours to extend the brand into actionable items. These colours shouldn't be used as brand or decorative colours, but purely for system and functional colours. A good example of their use is in form error handling.
 			.row
-				.span4.swatch.swatch--beta--red
+				.span4-sm.span6.swatch.swatch--beta--red
 					p Red
 						br
 						| @red
 						br
-				.span4.swatch.swatch--beta--pink
+				.span4-sm.span6.swatch.swatch--beta--pink
 					p Pink
 						br
 						| @pink
 						br
-				.span4.swatch.swatch--beta--orange
+				.span4-sm.span6.swatch.swatch--beta--orange
 					p Orange
 						br
 						| @orange
 						br
-			.row
-				.span4.swatch.swatch--beta--yellow
+				.span4-sm.span6.swatch.swatch--beta--yellow
 					p Yellow
 						br
 						| @yellow
 						br
-				.span4.swatch.swatch--beta--green
+				.span4-sm.span6.swatch.swatch--beta--green
 					p Green
 						br
 						| @green
 						br
-				.span4.swatch.swatch--beta--blue
+				.span4-sm.span6.swatch.swatch--beta--blue
 					p Blue
 						br
 						| @blue
 						br
-			.row
-				.span4.swatch.swatch--beta--aqua
+				.span4-sm.span6.swatch.swatch--beta--aqua
 					p Aqua
 						br
 						| @aqua
@@ -139,65 +136,62 @@ block content
 					h3 Extended palette tints
 					p Tint variations of the extended colour palette.
 			.row
-				.span4.swatch.swatch--beta--red-light
+				.span4-sm.span6.swatch.swatch--beta--red-light
 					p Red Light
 						br
 						| @red-light
 						br
-				.span4.swatch.swatch--beta--red-lighter
+				.span4-sm.span6.swatch.swatch--beta--red-lighter
 					p Red Lighter
 						br
 						| @red-lighter
 						br
-				.span4.swatch.swatch--beta--orange-light
+				.span4-sm.span6.swatch.swatch--beta--orange-light
 					p Orange Light
 						br
 						| @orange-light
 						br
-			.row
-				.span4.swatch.swatch--beta--orange-lighter
+				.span4-sm.span6.swatch.swatch--beta--orange-lighter
 					p Orange Lighter
 						br
 						| @orange-lighter
 						br
-				.span4.swatch.swatch--beta--green-light
+				.span4-sm.span6.swatch.swatch--beta--green-light
 					p Green Light
 						br
 						| @green-light
 						br
-				.span4.swatch.swatch--beta--green-lighter
+				.span4-sm.span6.swatch.swatch--beta--green-lighter
 					p Green Lighter
 						br
 						| @green-lighter
 						br
-			.row
-				.span4.swatch.swatch--beta--blue-light
+				.span4-sm.span6.swatch.swatch--beta--blue-light
 					p Blue Light
 						br
 						| @blue-light
 						br
-				.span4.swatch.swatch--beta--blue-lighter
+				.span4-sm.span6.swatch.swatch--beta--blue-lighter
 					p Blue Lighter
 						br
 						| @blue-lighter
 						br
-				.span4.swatch.swatch--beta--blue-darker
+				.span4-sm.span6.swatch.swatch--beta--blue-darker
 					p Blue Darker
 						br
 						| @blue-darker
 						br
-			.row
-				.span4.swatch.swatch--beta--aqua-light
+				.span4-sm.span6.swatch.swatch--beta--aqua-light
 					p Aqua Light
 						br
 						| @aqua-light
 						br
-				.span4.swatch.swatch--beta--yellow-light
+				.span4-sm.span6.swatch.swatch--beta--yellow-light
 					p Yellow Light
 						br
 						| @yellow-light
 						br
-				.span4.swatch.swatch--beta--purple-dark
+				.span4-sm.span6.swatch.swatch--beta--purple-dark
 					p Purple Dark
 						br
 						| @purple-dark
@@ -207,49 +201,47 @@ block content
 					h3 Monochrome palette
 					p Range for text primarily, but also for neutral colouring.
 			.row
-				.span4.swatch.swatch--mono--gray0
+				.span4-sm.span6.swatch.swatch--mono--gray0
 					p Gray 0
 						br
 						| @gray-0
 						br
-				.span4.swatch.swatch--mono--gray1
+				.span4-sm.span6.swatch.swatch--mono--gray1
 					p Gray 1
 						br
 						| @gray-1
 						br
-				.span4.swatch.swatch--mono--gray2
+				.span4-sm.span6.swatch.swatch--mono--gray2
 					p Gray 2
 						br
 						| @gray-2
 						br
-			.row
-				.span4.swatch.swatch--mono--gray3
+				.span4-sm.span6.swatch.swatch--mono--gray3
 					p Gray 3
 						br
 						| @gray-3
 						br
-				.span4.swatch.swatch--mono--gray4
+				.span4-sm.span6.swatch.swatch--mono--gray4
 					p Gray 4
 						br
 						| @gray-4
 						br
-				.span4.swatch.swatch--mono--gray5
+				.span4-sm.span6.swatch.swatch--mono--gray5
 					p Gray 5
 						br
 						| @gray-5
 						br
-			.row
-				.span4.swatch.swatch--mono--gray6
+				.span4-sm.span6.swatch.swatch--mono--gray6
 					p Gray 6
 						br
 						| @gray-6
 						br
-				.span4.swatch.swatch--mono--gray7
+				.span4-sm.span6.swatch.swatch--mono--gray7
 					p Gray 7
 						br
 						| @gray-7
 						br
-				.span4.swatch.swatch--mono--gray8
+				.span4-sm.span6.swatch.swatch--mono--gray8
 					p Gray 8
 						br
 						| @gray-8
@@ -259,23 +251,23 @@ block content
 					h3 Adviser colour palette
 					p Range of colours used for adviser only content.
 			//.row
-				.span4.swatch.swatch--adviser--inventive-teal-light
+				.span4-sm.span6.swatch.swatch--adviser--inventive-teal-light
 					p Inventive Teal Light
 						br
 						| @inventive-teal-light
 						br
-				.span4.swatch.swatch--adviser--inventive-teal-lighter
+				.span4-sm.span6.swatch.swatch--adviser--inventive-teal-lighter
 					p Inventive Teal Lighter
 						br
 						| @inventive-teal-lighter
 						br
 			//.row
-				.span4.swatch.swatch--adviser-blue-gray
+				.span4-sm.span6.swatch.swatch--adviser-blue-gray
 					p Adviser Blue Gray
 						br
 						| @adviser-blue-gray
 						br
-				.span4.swatch.swatch--adviser-stone
+				.span4-sm.span6.swatch.swatch--adviser-stone
 					p Adviser Stone
 						br
 						| @adviser-stone
