--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -10,15 +10,6 @@ extends ../template/template-blog.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home"}])
-	//.row
-		.span12
-			.blog-panel-intro
-				h1 Our users, this means all of you
-				p.small #[a(href="#") Cat Togher] on February 5, 2016 in #[a(href="#") Casebook], #[a(href="#") Design]
-				p No 2 local Citizens Advice are the same. They don’t represent the same people, they have different funding and they are different sizes. That’s why we’ve been working really hard to get the whole network signed up and involved in the digital project.
-
-				a(href="#" style="border-bottom:none;")
-					button.btn.btn-secondary.right-button-icon(type="button") Read full article
 
 block sidebar
 	include ../template/sidebar-blog.jade
@@ -35,8 +26,7 @@ block content
 				p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
 				img(src="images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image" style="width:100%;")
 				p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
-				a(href="#" style="border-bottom:none;")
-					button.btn-secondary.btn-small(type="button") Read full article
+				a(href="#").btn-secondary.btn-small(type="button") Read full article
 
 			.title__subheading--blog
 				.tag
@@ -47,8 +37,7 @@ block content
 				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
 				img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
 				p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
-				a(href="#" style="border-bottom:none;")
-					button.btn-secondary.btn-small(type="button") Read full article
+				a(href="#").btn-secondary.btn-small(type="button") Read full article
 
 		.flex-container.flex-row
 			.col-xs-12.col-md-6.blog-column-excerpt
