--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -66,11 +66,11 @@ block content
 				| &lt;/div&gt;
 				| &lt;div class="title__subheading--footer"&gt;
 				|     &lt;p&gt;Share this page. &lt;a&gt;Find out more about sharing.&lt;/a&gt;&lt;/p&gt;
-				|     &lt;a class="a-social-whatsapp show-mobile" href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);"&gt;Whatsapp&lt;/a&gt;
-				|     &lt;a class="a-social-messenger show-mobile" href="javascript:window.location='fb-messenger://share?link='+encodeURIComponent(location.href);"&gt;Messenger&lt;/a&gt;
+				|     &lt;a class="a-social-whatsapp show-mobile" href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);" data-track="Whatsapp"&gt;Whatsapp&lt;/a&gt;
+				|     &lt;a class="a-social-messenger show-mobile" href="javascript:window.location='fb-messenger://share?link='+encodeURIComponent(location.href);" data-track="Facebook Messenger"&gt;Messenger&lt;/a&gt;
 				|     &lt;a class="a-social-twitter" data-track="Twitter" href="https://twitter.com/share?url=" rel="external"&gt;Twitter&lt;/a&gt;
 				|     &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
-				|     &lt;a class="a-social-linkedin" target="_blank"&gt;LinkedIn&lt;/a&gt;
+				|     &lt;a class="a-social-linkedin" target="_blank" data-track="LinkedIn"&gt;LinkedIn&lt;/a&gt;
 				|     &lt;a class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/a&gt;
 				|     &lt;button class="a-social-copy"&gt;Copy link&lt;div class="copied"&gt;Copied!&lt;/div&gt;&lt;/button&gt;
 				| &lt;/div&gt;
